--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,6 +10,7 @@ jobs:
       - run: >
           sudo update-alternatives --set iptables /usr/sbin/iptables-legacy &&
           sudo update-alternatives --set ip6tables /usr/sbin/ip6tables-legacy &&
+          sudo systemctl restart docker &&
           docker run hello-world &&
           docker network create foo &&
           iptables --version &&
